--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* Hide arrows for number inputs */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
